кучу всего добавила

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       context: ./telegram_bot
     networks:
       - mynetwork
-#    depends_on:
-#      -
+    depends_on:
+      - djangoapp
 
   selenium-chromium:
     image: seleniarm/standalone-chromium:latest
@@ -21,28 +21,28 @@ services:
     networks:
       - mynetwork
 
-#  djangoapp:
-#    build:
-#      context: ./myapi
-#    depends_on:
-#      - db
-#    environment:
-#      - DATABASE_URL=postgresql://admin:prod@db:5432/postgres
-#    ports:
-#      - "8000:8000"
-#    networks:
-#      - mynetwork
-#
-#  db:
-#    image: postgres:13
-#    environment:
-#      - POSTGRES_DB=postgres
-#      - POSTGRES_USER=admin
-#      - POSTGRES_PASSWORD=prod
-#    volumes:
-#      - pg_data:/var/lib/postgresql/data
-#    networks:
-#      - mynetwork
+  djangoapp:
+    build:
+      context: ./autobotserver
+    depends_on:
+      - db
+    environment:
+      - DATABASE_URL=postgresql://admin:prod@db:5432/postgres
+    ports:
+      - "8000:8000"
+    networks:
+      - mynetwork
+
+  db:
+    image: postgres:13
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=prod
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+    networks:
+      - mynetwork
 
 volumes:
   pg_data:
