--- a/autobotserver/requirements.txt
+++ b/autobotserver/requirements.txt
@@ -9,6 +9,7 @@ attrs==23.1.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
 Django==4.2.7
+djangorestframework==3.14.0
 exceptiongroup==1.2.0
 frozenlist==1.4.0
 h11==0.14.0
