--- a/telegram_bot/requirements.txt
+++ b/telegram_bot/requirements.txt
@@ -5,31 +5,44 @@ aiosignal==1.3.1
 annotated-types==0.6.0
 asgiref==3.7.2
 async-timeout==4.0.3
-beautifulsoup4==4.12.2
 attrs==23.1.0
+beautifulsoup4==4.12.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 Django==4.2.7
+django-restframework==0.0.1
+djangorestframework==3.14.0
+et-xmlfile==1.1.0
 exceptiongroup==1.2.0
 frozenlist==1.4.0
 h11==0.14.0
 idna==3.6
 magic-filter==1.0.12
 multidict==6.0.4
+numpy==1.26.3
+openpyxl==3.1.2
 outcome==1.3.0.post0
 packaging==23.2
+pandas==2.1.4
+psycopg==3.1.17
+psycopg2==2.9.9
 pydantic==2.5.2
 pydantic_core==2.14.5
 PySocks==1.7.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+pytz==2023.3.post1
 requests==2.31.0
 selenium==4.15.2
+six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
+soupsieve==2.5
 sqlparse==0.4.4
 trio==0.23.1
 trio-websocket==0.11.1
 typing_extensions==4.8.0
+tzdata==2023.4
 urllib3==2.1.0
 webdriver-manager==4.0.1
 wsproto==1.2.0
